changed the position of the menu in mobile display from absolute to fixed. That way, if someone clickes on the menu without being fully at the top, it will still be fully visible

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav ul {
 
 	.menu {
 		display: flex;
-		position: absolute;
+		position: fixed;
 		top: 0em;
 		left: -10em;
 		padding-top: 3.4em;
